{
    "name": "Phone_Input",
    "maps": [
        {
            "name": "Touch",
            "id": "d193587e-90b1-4de9-8567-21f696f18e97",
            "actions": [
                {
                    "name": "TouchPress",
                    "type": "Button",
                    "id": "64595df9-aec4-483c-b539-d0cc850b0ca5",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "TouchPosition",
                    "type": "Value",
                    "id": "1c50b53d-c619-4f29-8ac7-143037ee38bd",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "TouchMove",
                    "type": "Value",
                    "id": "cac85add-ce79-46b9-b886-1e19a6a4a394",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "DoubleTouch",
                    "type": "Button",
                    "id": "bab0bac2-0f34-46d1-a469-3b94ddc9ab19",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "LongTouch",
                    "type": "Button",
                    "id": "6b40a37f-bd9a-42a9-aded-41618c6a009f",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "caa46a96-fec1-48d5-ad88-819c2ec47b86",
                    "path": "<Touchscreen>/Press",
                    "interactions": "Press(behavior=2)",
                    "processors": "",
                    "groups": "",
                    "action": "TouchPress",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "80a12edb-01b8-49a5-beda-3b6397d621b7",
                    "path": "<Touchscreen>/position",
                    "interactions": "Hold",
                    "processors": "",
                    "groups": "",
                    "action": "TouchPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "207bac17-c9d2-4975-a3f3-a5ddd71ccaa7",
                    "path": "<Touchscreen>/delta",
                    "interactions": "Hold",
                    "processors": "",
                    "groups": "",
                    "action": "TouchMove",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c4ab226e-2eca-43a9-b627-7765d0318598",
                    "path": "<Touchscreen>/Press",
                    "interactions": "MultiTap",
                    "processors": "",
                    "groups": "",
                    "action": "DoubleTouch",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "41b512ff-b14f-4a10-8ad2-706e74b390a2",
                    "path": "<Touchscreen>/Press",
                    "interactions": "Hold",
                    "processors": "",
                    "groups": "",
                    "action": "LongTouch",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "Phone",
            "bindingGroup": "Phone",
            "devices": [
                {
                    "devicePath": "<Touchscreen>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}